--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -54,7 +54,30 @@ Core d20 RPG - это проект по написанию набора прав
 
 Все наши материалы размещенные в Гильдии Мастеров.
 
-[Waterdeep in tables]()
+electrum [Waterdeep in tables](https://www.dmsguild.com/product/247012/Waterdeep-in-tables?affiliate_id=759617)
+
+copper [Baldur's Gate in Tables](https://www.dmsguild.com/product/294548/Baldurs-Gate-in-Tables?affiliate_id=759617)
+
+silver [Press of Eberron](https://www.dmsguild.com/product/297874/Press-of-Eberron?affiliate_id=759617)
+
+silver [Flaming Fist](https://www.dmsguild.com/product/289077/Flaming-Fist?affiliate_id=759617)
+
+copper [Palant's guide to Exploring Sword Coast](https://www.dmsguild.com/product/314810/Palants-guide-to-Exploring-Sword-Coast?affiliate_id=759617)
+
+copper [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs-of-Forgotten-Realms?affiliate_id=759617)
+
+[Horses of Forgotten Realms](https://www.dmsguild.com/product/317625/Horses-of-Forgotten-Realms?affiliate_id=759617)
+
+[Salvation bases and missions in tables](https://www.dmsguild.com/product/309280/Salvation-bases-and-missions-in-tables?affiliate_id=759617)
+
+[Palant's Guide to Combat](https://www.dmsguild.com/product/305891/Palants-Guide-to-Combat?affiliate_id=759617)
+
+[Однажды на постоялом дворе](https://www.dmsguild.com/product/323191/---?affiliate_id=759617)
+
+[Одного разу на постоялому дворі](https://www.dmsguild.com/product/437719/----?affiliate_id=759617)
+
+
+
 
 
 ## Материалы размещенные на drivethrurpg.com
