--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -23,6 +23,10 @@ links:
 - Станислав "Drakzar" Иванов, ГМ, переводчик-любитель, бывший локальный координатор Лиги Авантюристов
 - Семен, ГМ, цифровой художник
 - Алексей "HellFell", ГМ и прекрасный человек
+- Кирилл "Byrricade" Лысенков
+- m0ngo
+- Дамир "Е..ный Далай Лама" Рахимов
+
 
 ## Как появилось сообщество?
 
@@ -58,7 +62,7 @@ links:
 
 ## Создание домашних правил и homebrew
 
-Закономерным итогом многолетнего вождения D&D 5e и хаков на основе ее движка стало написание собственных вариантных правил и дополнений, которые в целом также хорошо были восприняты англоязычным сообществом - Palant Guide to Combat, Herbs of Forgotten Realms в частности.
+Закономерным итогом многолетнего вождения D&D 5e и хаков на основе ее движка стало написание собственных вариантных правил и дополнений, которые в целом также хорошо были восприняты англоязычным сообществом - [Palant Guide to Combat](https://www.dmsguild.com/product/305891/Palants-Guide-to-Combat?affiliate_id=759617), [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs-of-Forgotten-Realms?affiliate_id=759617) в частности.
 
 После чего были начаты публикации и на drivethrurpg.com
 
@@ -66,6 +70,6 @@ links:
 
 <Aside>
 
-Сейчас мы переводим несколько книг англоязычных авторов, продолжаем работу над переводом SRD 5.1 и готовим свои материалы, которые могут заменить D&D 5e после выхода One D&D - наш проект Core d20 RPG
+Сейчас мы переводим несколько книг англоязычных авторов, продолжаем работу над [переводом SRD 5.1](https://srd.dnd-5e.org/) и готовим свои материалы, которые могут заменить D&D 5e после выхода One D&D - наш проект [Core d20 RPG](https://cyborgsandmages.com/core-d20/1)
 
 </Aside>
