--- a/src/content/posts/articles/homebrewery.mdx
+++ b/src/content/posts/articles/homebrewery.mdx
@@ -8,5 +8,17 @@ tags:
   - Руководство
 ---
 
-Здесь будет текст.
+## Шаблоны файлов в Homebrewery
+
+[Шаблон Киборги и Чародеи](https://homebrewery.naturalcrit.com/share/7j4Lg5OpdD5G)
+
+[Шаблон Киборги и Чародеи V3](https://homebrewery.naturalcrit.com/share/tca5IviRBQms)
+
+[Шаблон Киборги и Чародеи Legacy 2](https://homebrewery.naturalcrit.com/share/1LljdHKgG6QCtqytkmfC-djlIS1XRtKUuS9f-DTOxG4Q_)
+
+[Включенные в файл шрифты](https://homebrewery.naturalcrit.com/share/16Qtw93HstQP)
+
+## Расширение Fontbrewery от Long Story Short
+
+Расширение [Fontbrewery](https://chrome.google.com/webstore/detail/fontbrewery/ppbfodpmcdkppemmgpjdbeofnoacchlp)
 
