--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -84,9 +84,9 @@ copper [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs
 
 Все наши материалы опубликованные на Drivethrurpg.com
 
-[Palant Notes about Combat, 1]()
+[E5E Palant Notes about Combat, 1](https://www.drivethrurpg.com/product/379531/E5E--Palant-Notes-about-Combat-Issue-1?affiliate_id=759617)
 
-[Palant Notes about Combat, 2]()
+[E5E Palant Notes about Combat, 2](https://www.drivethrurpg.com/product/400474/E5E--Palant-Notes-about-Combat-Issue-2?affiliate_id=759617)
 
 ## Прочие наши материалы и Проекты
 
