--- a/src/content/posts/articles/homebrewery.mdx
+++ b/src/content/posts/articles/homebrewery.mdx
@@ -22,3 +22,28 @@ tags:
 
 Расширение [Fontbrewery](https://chrome.google.com/webstore/detail/fontbrewery/ppbfodpmcdkppemmgpjdbeofnoacchlp)
 
+## Рекомендуемые шрифты
+
+Alegreya
+
+Alegreya SC
+
+Cormorant
+
+EB Garamond
+
+Lora
+
+Mookmania
+
+Nodesto
+
+PT Serif
+
+Spectral
+
+Lato
+
+Philosopher
+
+
