--- a/src/content/posts/articles/homebrewery.mdx
+++ b/src/content/posts/articles/homebrewery.mdx
@@ -8,6 +8,12 @@ tags:
   - Руководство
 ---
 
+Основная проблема с использованием Homebrewery - это то что многие шрифты включенные по умолчанию в стили - это шрифты, которые не поддерживают кириллицу.
+
+Поэтому есть несколько способов использования хороших шрифтов в Homebrewery - это самостоятельно включить в стилях использование кириллических шрифтов, использовать веб шрифты от гугл, использовать расширение Fontbrewery
+
+
+
 ## Шаблоны файлов в Homebrewery
 
 [Шаблон Киборги и Чародеи](https://homebrewery.naturalcrit.com/share/7j4Lg5OpdD5G)
