--- a/src/content/posts/articles/homebrewery.mdx
+++ b/src/content/posts/articles/homebrewery.mdx
@@ -10,7 +10,7 @@ tags:
 
 Основная проблема с использованием Homebrewery - это то что многие шрифты включенные по умолчанию в стили - это шрифты, которые не поддерживают кириллицу.
 
-Поэтому есть несколько способов использования хороших шрифтов в Homebrewery - это самостоятельно включить в стилях использование кириллических шрифтов, использовать веб шрифты от гугл, использовать расширение Fontbrewery
+Поэтому есть несколько способов использования хороших шрифтов в Homebrewery - это самостоятельно включить в стилях использование кириллических шрифтов, использовать веб шрифты от гугл, использовать расширение Fontbrewery.
 
 
 
