--- a/src/content/posts/articles/economy-dnd-model-2.mdx
+++ b/src/content/posts/articles/economy-dnd-model-2.mdx
@@ -1,19 +1,11 @@
 ---
-title: "Экономическая модель пятой редакции, часть 2"
-description: Анализ экономической модели пятой редакции, часть 2
-date: "2022-08-06"
-tags: 
-  - "5e"
-  - "analysis"
-  - "cost"
-  - "e5e"
-  - "economic-system"
-  - "economics"
-  - "economy"
-  - "magic-items"
-  - "money"
-  - "rarity"
-  - "wealth"
+title: 'Экономическая модель пятой редакции Dungeons and Dragons – стоимость волшебных предметов, часть 2'
+description: 'Поиск способов оценки волшебных предметов'
+date: '2022-07-24'
+tags:
+  - Экономика
+  - Волшебные предметы
+  - Ресурсы
 ---
 
 
