--- a/src/content/posts/articles/economy-dnd-model-3.mdx
+++ b/src/content/posts/articles/economy-dnd-model-3.mdx
@@ -10,9 +10,9 @@ tags:
 
 Это третья часть из цикла авторских материалов про экономическую модель пятой редакции и попытке решения её проблем.
 
-Часть 1, в которой приводился анализ базовых правил пятой редакции 
+[Часть 1, в которой приводился анализ базовых правил пятой редакции ](https://cyborgsandmages.com/posts/articles/economy-dnd-model-1)
 
-Часть 2, в которой наметился подход к формированию цен
+[Часть 2, в которой наметился подход к формированию цен](https://cyborgsandmages.com/posts/articles/economy-dnd-model-2)
 
 Собственно, в этой части продолжим говорить про оценку стоимости волшебных предметов, затронув также элементы их создания.
 
@@ -320,9 +320,12 @@ tags:
 - ингредиенты соответствующей редкости в состоянии ускорить процесс изготовления предметов.
 Выбор подхода является сеттингозависым и в целом определяет сложность создания предметов в сеттинге.
 
-СПИСОК ОСНОВНЫХ ХАРАКТЕРИСТИК ПРЕДМЕТОВ ПО ЗЛОМУ ГМ-У
+## СПИСОК ОСНОВНЫХ ХАРАКТЕРИСТИК ПРЕДМЕТОВ ПО ЗЛОМУ ГМ-У
+
 https://theangrygm.com/how-to-describe-an-item/
+
 https://view.officeapps.live.com/op/view.aspx?src=https%3A%2F%2Ftheangrygm.com%2Fwp-content%2Fuploads%2F2020%2F06%2FDMG-Magic-Item-List-With-Final-Qualities.xlsx&wdOrigin=BROWSELINK
+
 
 **Acidic.** Associated with acid damage, evocation spells that deal acid damage, conjuring acid, acid resistance, rusting, and corrosion.
 
