--- a/src/content/posts/articles/economy-dnd-model-3.mdx
+++ b/src/content/posts/articles/economy-dnd-model-3.mdx
@@ -16,11 +16,11 @@ tags:
 
 Собственно, в этой части продолжим говорить про оценку стоимости волшебных предметов, затронув также элементы их создания.
 
-# Недостатки оценки стоимости предметов на основе стоимости заклинаний
+## Недостатки оценки стоимости предметов на основе стоимости заклинаний
 
 Во второй части я показал подход к оценке стоимости волшебных предметов на основе стоимости эффектов заклинаний. Очевидно, что этот подход обладает существенным недостатком: он плохо применим для предметов, эффекты которых не основаны на заклинаниях – например, кольцо хранения заклинаний.
 
-## ОЦЕНКА КОЛЬЦА ХРАНЕНИЯ ЗАКЛИНАНИЙ
+### ОЦЕНКА КОЛЬЦА ХРАНЕНИЯ ЗАКЛИНАНИЙ
 
 Кольцо хранения заклинаний – хоть и требует подготовки для использования создает несколько возможных эффектов:
 - для обычных заклинателей это дополнительные подготовленные заклинания;
@@ -40,7 +40,7 @@ tags:
 
 Следовательно, стоимость кольца хранения заклинаний будет составлять 2500*10*0,5*2=25000 зм.
 
-## ВЛИЯНИЕ КОНЦЕНТРАЦИИ И ДЛИТЕЛЬНОСТИ ДЕЙСТВИЯ БАЗОВОГО ЗАКЛИНАНИЯ НА СТОИМОСТЬ ПРЕДМЕТА
+### ВЛИЯНИЕ КОНЦЕНТРАЦИИ И ДЛИТЕЛЬНОСТИ ДЕЙСТВИЯ БАЗОВОГО ЗАКЛИНАНИЯ НА СТОИМОСТЬ ПРЕДМЕТА
 
 Во второй части я предположил использовать стоимость сотворения заклинания в качестве базового подхода к оценке свойств предмета забыв про то, что многие заклинания требуют концентрации, а многие заклинания имеют ограниченное время действия.
 
@@ -48,7 +48,7 @@ tags:
 
 Опять же – эти коэффициенты являются ориентировочными и пока не строгими.
 
-# Типология волшебных предметов
+## Типология волшебных предметов
 
 С точки зрения типологии – волшебные предметы можно разделить на множество различных групп – по редкости, расходу, виду, разумности и так далее. Некоторые из этих факторов явно влияют на стоимость.
 
@@ -97,7 +97,7 @@ tags:
 
 В руководстве Занатара по всему появилась дополнительная классификация предметов – малые (minor) и значительные (major).
 
-# Дополнительные факторы, влияющие на стоимость
+## Дополнительные факторы, влияющие на стоимость
 
 Любые факторы, которые ограничивают использование эффектов предмета уменьшают его стоимость. К ним относится требования по настройке, время активации, необходимость свободных рук и т. д.
 
@@ -105,23 +105,23 @@ tags:
 
 Для предметов, воссоздающих эффекты заклинаний в прямом виде (например жезл огненных шаров или  палочка магических стрел) базовая стоимость определяется по базовому варианту использования – без учета повышенного расхода зарядов, т.е. базовая стоимость палочки волшебных стрел будет рассчитываться исходя из семикратного использования заклинания первого круга – т.е. 140 зм x 10 = 1400 зм. А возможность использовать несколько зарядов одновременно – это множитель к стоимости. Скажем, x2. Следовательно, уточненная стоимость палочки волшебных зарядов – 2800. Влияние же перезарядки для волшебной палочки магических стрел с максимальным количеством зарядов 7 и перезарядкой 1к6+1 зарядов в день уменьшает стоимость –на скорость перезарядки, т.е. среднее от 1к6+1 = 4,5 заряда в день, следовательно множитель перезарядки будет составлять: 65%. Итоговая стоимость волшебной палочки магических стрел: 1820 зм.
 
-## ВЛИЯНИЕ НАСТРОЙКИ НА СТОИМОСТЬ ПРЕДМЕТА
+### ВЛИЯНИЕ НАСТРОЙКИ НА СТОИМОСТЬ ПРЕДМЕТА
 
 Оценить отдельно влияние требования настройки на предмет на стоимость волшебного предмета достаточно сложно. Множитель 0,5 может быть чересчур заниженным, а 0,9 – завышенным, поэтому базово я скорее всего буду использовать множитель 0,75 но буду помнить о том, что эта величина не является фиксированной.
 
 Требование же настройки определенным классом и расой – это также дополнительный модификатор стоимости от 0,25 до 1.
 
-## ДОПОЛНИТЕЛЬНЫЕ ФАКТОРЫ ИЗМЕНЯЮЩИЕ СТОИМОСТЬ
+### ДОПОЛНИТЕЛЬНЫЕ ФАКТОРЫ ИЗМЕНЯЮЩИЕ СТОИМОСТЬ
 
 Дополнительные свойства волшебных предметов – создатель, история создания и т.п. также могут оказывать эффект на стоимость предмета. В качестве базового подхода я бы принял наличие положительных свойств как увеличение стоимости предмета на 10%.
 
-# Дополнительная классификация – ценность и мощность волшебных предметов
+## Дополнительная классификация – ценность и мощность волшебных предметов
 
-## ЦЕННОСТЬ И МОЩНОСТЬ СВИТКОВ ЗАКЛИНАНИЙ
+### ЦЕННОСТЬ И МОЩНОСТЬ СВИТКОВ ЗАКЛИНАНИЙ
 
 Очевидно, что свитки заклинаний с расходуемыми компонентами являются в общем виде более ценными, нежели свитки заклинаний без расходуемых компонентов. Также свитки заклинаний с дорогостоящими компонентами также имеют дополнительную ценность, равно как и свитки ритуальных заклинаний.
 
-## ЦЕННОСТЬ И МОЩНОСТЬ ПОСТОЯННЫХ ВОЛШЕБНЫХ ПРЕДМЕТОВ
+### ЦЕННОСТЬ И МОЩНОСТЬ ПОСТОЯННЫХ ВОЛШЕБНЫХ ПРЕДМЕТОВ
 
 Для ранжирования ценности (мощности) постоянных волшебных предметов стоит применять следующий подход. В общем, связь мощности с редкостью – для нас является понятной и очевидной на базовом понятийном уровне, следовательно для каждой градации редкости мы можем определить базовый уровень ценности и мощности. Далее, в зависимости от стоимости предмета на основе эффектов предмета, можно разделить предметы на дополнительные подгруппы, но возникает вопрос по соотношению мощности подгрупп различных редкостей. Отсюда следует вывод, что все-таки типология предметов по ценности и мощности не может быть напрямую основана на редкости и должна быть независимой, тем не менее усредненные базовые ценности для каждой редкости вполне могут быть одним из классов предметов по мощности.
 
@@ -157,9 +157,9 @@ tags:
 
 Очевидно, что все расходуемые предметы следует рассматривать отдельно от постоянных предметов в силу их конечности, но поскольку в определении стоимости мы учитываем факт расходуемости предметов и воспроизведения эффектов, то выделять расходуемые предметы отдельно смысла нет.
 
-# Оценка различных предметов
+## Оценка различных предметов
 
-## КЛАСС ЗАЩИТЫ
+### КЛАСС ЗАЩИТЫ
 
 Если с эффектом зачарования волшебного оружия было легко определиться использовав в качестве базы заклинание второго круга, то с предметами, которые дают бонус к Классу Защиты сложнее.
 
@@ -178,7 +178,7 @@ tags:
 Стоимость эффекта +1 – 3000 зм (оценивая зависимость ценности от бонуса как квадратичную) и стоимость эффекта +3 – 3000*3^2=27000 зм.
 Для щитов, в виду их ограниченности стоимость эффекта уменьшается в 2 раза.
 
-## БОНУС К СПАСБРОСКАМ
+### БОНУС К СПАСБРОСКАМ
 
 Базовым заклинанием в данном случае будет заклинание Благословение.
 
@@ -198,7 +198,7 @@ tags:
 
 Базовая стоимость: 6840*0,75=5130 зм
 
-## ЗЕЛЬЯ ЛЕЧЕНИЯ РАЗЛИЧНОЙ РЕДКОСТИ
+### ЗЕЛЬЯ ЛЕЧЕНИЯ РАЗЛИЧНОЙ РЕДКОСТИ
 
 Стоимость зелья лечения составляет 50 зм. При этом зелье восстанавливает 2к4+2=7 хитов в среднем, т.е. стоимость 1 хита лечения составляет 7,14 зм. 
 
@@ -212,7 +212,7 @@ tags:
 | Превосходное зелье лечения | 8к4+8 (28)             | 200                     | 600                              |
 | Наилучшее зелье лечения    | 10к4+20 (45)           | 321,3 зм                | 1282,4                           |
 
-## БОНУСНЫЙ УРОН
+### БОНУСНЫЙ УРОН
 
 Для определения базового заклинания для бонусного урона у нас также есть несколько вариантов:
 - Божественная милость с 1к4 урона на 1 минуту
@@ -220,7 +220,7 @@ tags:
 - 
 В качестве базового варианта стоит принять божественную милость, поскольку этот урон не фиксируется на одной цели и не имеет дополнительных свойств.
 
-### Пламенный язык
+#### Пламенный язык
 
 Меч пламенный язык дополнительно наносит при попадании 2к6 урона огнем, немного светится  и требует настройки.
 
@@ -234,7 +234,7 @@ tags:
 
 Итоговая стоимость: 5500*0,75=4125 зм.
 
-### Погибель великанов
+#### Погибель великанов
 
 Дополнительный урон: 2к6 против великанов
 
@@ -250,7 +250,7 @@ tags:
 
 Итоговая стоимость:  5100 зм.
 
-### Солнечный клинок
+#### Солнечный клинок
 
 Дополнительный урон: 1к8 лучистого урона против нежити
 
@@ -260,9 +260,9 @@ tags:
 
 Требует настройки
 
-# Правила по созданию волшебных предметов
+## Правила по созданию волшебных предметов
 
-## АНАЛИЗ БАЗОВЫХ ПРАВИЛ
+### АНАЛИЗ БАЗОВЫХ ПРАВИЛ
 
 Базовые правила пятой редакции предусматривают следующие элементы при создании волшебных предметов:
 - длительность процесса, которая зависит от редкости предмета;
@@ -271,10 +271,10 @@ tags:
 - наличие формулы, необходимой для создания предмета;
 - редкие ингредиенты, чья редкость зависит от редкости предмета, но стоимость входит в общую стоимость создания.
   
-## Wayfarer guide to Eberron
+### Wayfarer guide to Eberron
 Некоторые интересные позиции были обозначены в WGtE – например, минимальное значение навыка для создания предметов, связь редкости ингредиентов с показателем опасности существа, базовую стоимость предметов от редкости.
 
-## СОСТАВЛЯЮЩИЕ ПРОЦЕССА СОЗДАНИЯ ВОЛШЕБНЫХ ПРЕДМЕТОВ
+### СОСТАВЛЯЮЩИЕ ПРОЦЕССА СОЗДАНИЯ ВОЛШЕБНЫХ ПРЕДМЕТОВ
 
 Для создания правил по созданию волшебных предметов я буду идти от нарративной части процесса.
 
@@ -293,7 +293,7 @@ tags:
 - ценность*;
 - стоимость*.
   
-### Создатель предмета
+#### Создатель предмета
 
 Создатель предмета – персонаж, создающий волшебный предмет обладает следующими игромеханическими характеристиками, пригодными для использования в механике создания предметов:
 - уровень;
@@ -303,18 +303,19 @@ tags:
 
 Также при создании предмета со свойствами аналогичными заклинанию создатель должен знать это заклинание.
 
-### Мастерская или библиотека
+#### Мастерская или библиотека
 
 Мы на базовом понятийном уровне осознаем, что успешность создания предметов также зависит от используемых инструментов, рабочего пространства, а создание схемы предмета – от наличия дополнительной информации. Таким образом, качество мастерской или библиотеки является важным параметром при создании предмета или его схемы. Используя подходы из старых редакций, ретроклонов следует учитывать это качество при определении как времени создания предметов так и дополнительной стоимости. Также наличие соответствующей мастерской или библиотеки может быть и обязательным требованием.
 
-### Чертеж и предмет
+#### Чертеж и предмет
 
 Процесс создания предмета целесообразно разбить на два этапа:
 1.	Изготовление принципиальной схемы, чертежа
 2.	Создание предмета с использованием созданной схемы.
 Таким образом, при повторном создании предмета длительность процесса создания будет меньшей.
 
-### Ингредиенты и материалы
+#### Ингредиенты и материалы
+
 Создание волшебных предметов может зависеть от ингредиентов и материалов несколькими способами:
 - для создания предмета определенной ценности требуются соответствующей редкости ингредиенты, что является дополнительным ограничением;
 - ингредиенты соответствующей редкости в состоянии ускорить процесс изготовления предметов.
