--- a/src/content/posts/articles/economy-dnd-model-4.mdx
+++ b/src/content/posts/articles/economy-dnd-model-4.mdx
@@ -12,6 +12,11 @@ tags:
 
 В первых трех частях этого цикла я говорил о способах оценки стоимости создания волшебных предметов.
 
+[Часть 1, в которой приводился анализ базовых правил пятой редакции](https://cyborgsandmages.com/posts/articles/economy-dnd-model-1)
+[Часть 2, в которой наметился подход к формированию цен](https://cyborgsandmages.com/posts/articles/economy-dnd-model-2)
+[Часть 3, примеры оценки стоимости волшебных предметов](https://cyborgsandmages.com/posts/articles/economy-dnd-model-3)
+
+
 Но один из самых животрепещущих вопросов это создание волшебных свитков и услуги заклинателей.
 
 В чем заключается проблема?
