--- a/src/content/posts/articles/economy-dnd-model-2.mdx
+++ b/src/content/posts/articles/economy-dnd-model-2.mdx
@@ -15,7 +15,7 @@ tags:
 
 Если вы хотите тоже помочь нам в это непростое время, то про способы помощи можно прочесть [здесь.](https://cyborgsandmages.com/about-cyborgs-and-mages/help-and-support/support-us/)
 
-[В первой части](https://cyborgsandmages.com/2022/07/dnd-economy-part-1/) мы осмотрели основные официальные подходы к стоимости волшебных предметов в пятой редакции и самое время подытожить.
+[В первой части](https://cyborgsandmages.com/posts/articles/economy-dnd-model-1) мы осмотрели основные официальные подходы к стоимости волшебных предметов в пятой редакции и самое время подытожить.
 
 ## Основное в правилах пятой редакции про стоимость и создание волшебных предметов
 
@@ -110,4 +110,4 @@ tags:
 
 Полученные значения также позволяют немного переопределить стоимость волшебных предметов от редкости – так для необычных предметов это может быть от 1000 до 5000 зм, для редких – от 5000 до 25000 зм, для очень редких – от 25000 до 75000 зм, а для легендарных от 75000 и до 250000 зм.
 
-Продолжение следует …
+[Продолжение следует …](https://cyborgsandmages.com/posts/articles/economy-dnd-model-3)
