--- a/src/content/posts/articles/economy-dnd-model-4.mdx
+++ b/src/content/posts/articles/economy-dnd-model-4.mdx
@@ -120,3 +120,5 @@ tags:
 | 7               | 1715                                    | 8575                            |
 | 8               | 2560                                    | 12800                           |
 | 9               | 3645                                    | 18225                           |
+
+[Продолжение следует …](https://cyborgsandmages.com/posts/articles/economy-dnd-model-5)
