--- a/src/content/posts/articles/economy-dnd-model-3.mdx
+++ b/src/content/posts/articles/economy-dnd-model-3.mdx
@@ -368,6 +368,8 @@ https://view.officeapps.live.com/op/view.aspx?src=https%3A%2F%2Ftheangrygm.com%2
 
 **Zephyrous (Windy, Airy).** Associated with wind, elemental air, air elemental creatures, flight, breathing, and objects that can float or hover under their own power.
 
+[Продолжение следует …](https://cyborgsandmages.com/posts/articles/economy-dnd-model-4)
+
 # Используемые источники
 
 1.	https://dumpstatadventures.com/the-gm-is-always-right/pricing-magic-items-part-1
