--- a/src/content/posts/articles/economy-dnd-model-4.mdx
+++ b/src/content/posts/articles/economy-dnd-model-4.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Экономическая модель пятой редакции Dungeons and Dragons – стоимость волшебных предметов, часть 4'
-description: 'Поиск способов оценки волшебных предметов'
+description: 'Стоимость написания волшебных свитков заклинаний и услуг заклинателей в пятой редакции - пересмотренные'
 date: '2023-06-01'
 tags:
   - Экономика
