--- a/src/content/posts/articles/economy-dnd-model-4.mdx
+++ b/src/content/posts/articles/economy-dnd-model-4.mdx
@@ -21,6 +21,8 @@ tags:
 
 Но один из самых животрепещущих вопросов это создание волшебных свитков и услуги заклинателей.
 
+Собственно, во второй части я уже показал один подход. А в этой статье приводится альтернатива ему, которая более пригодна для использования (соответственно расчеты мне также придется поменять).
+
 В чем заключается проблема?
 
 Свиток заклинаний, по своей природе, это расходуемый предмет, создаваемый заклинателем для возможности сотворения заклинаний после израсходования всех ячеек, поэтому стоимость его создания должна быть подъемной для заклинателя на любом уровне. Так же время создания свитка должно быть таким, чтобы его было целесообразно создавать.
