--- a/src/content/posts/articles/economy-model-dnd-5.mdx
+++ b/src/content/posts/articles/economy-model-dnd-5.mdx
@@ -191,4 +191,4 @@ tags:
 | 13                   | 19      | 9                  | 855                |
 | 14                   | 20      | 9                  | 900                |
 
-
+[Продолжение следует …](https://cyborgsandmages.com/posts/articles/economy-dnd-model-6)
