--- a/src/content/posts/articles/economy-dnd-model-5.mdx
+++ b/src/content/posts/articles/economy-dnd-model-5.mdx
@@ -51,6 +51,17 @@ tags:
 
 Квалифицированные наемники стоят не менее 2 зм за каждый день работы. Опытный наемник имеет один или несколько навыков или владения инструментом, владение оружием, может говорить на других языках и даже читать заклинания. Бонус владение опытных наемников обычно равен +2. Как правило, квалифицированные наемники предпочитают получать как можно больше авансом. Примеры квалифицированных наемников перечислены ниже.
 
+Умелый наемный работник обладает одним или несколькими навыками работы с инструментами или владеет какими-то навыками.
+
+Базовый умелый наемный работник имеет бонус +3 к проверкам, связанными с его основной деятельностью (так, умелый музыкант будет иметь +3 на проверки владения музыкальными инструментами или навыка Выступление).
+
+Почему +3? Мы предполагаем, что у умелого наемного работника базовая для его вида деятельности характеристика немного выше среднего значения (10), т.е. 12 или 13, что дает бонус от модификатора характеристики +1 и +2 от базового бонуса владения.
+
+Услуги более умелых наемных работников с более высокими характеристиками (за счет расовых свойств, или роста их опытности) стоят дороже.
+
+Задачи и деятельности простоя. Умелые наемные работники могут выполнять задачи организации.
+
+
 **Ремесленник.** Ремесленником обычно является простолюдин с Интеллектом не менее 12 (+1) и умением обращаться с одним или несколькими наборами ремесленных инструментов. Ремесленник изготовит для вас обычные не магические предметы, соответствующие его навыкам работы с инструментами, взимая 2 зм в день плюс стоимость материалов. Известный ремесленник, такой как состоятельный художник или скульптор, может вместо этого брать 5 зм в день плюс стоимость материалов. Мастер решает, сколько времени потребуется ремесленнику для изготовления предмета, обычно это занимает 1 день работы на каждые 10 зм стоимости предмета.
 
 **Целитель.** Целитель — это простолюдин, помощник или жрец, владеющий наборами для травничества. Целитель берет 2 зм в день, чтобы позаботиться о вас или о ком-то еще, занимаясь ранами, ядами и болезнями, поражающими пациента. Они также могут сопровождать вас в ваших приключениях в качестве своего рода полевого медика, взимая 4 зм в день (даже если вы не пользуетесь их услугами в этот день). После окончания отдыха, во время которого вас лечил целитель, вы можете максимизировать бросок любой Кости Хитов, который вы тратите на лечение. Помощник или жрец-целитель также будут использовать свои заклинания и способности, чтобы восстановить ваши очки жизни или вылечить вас от ядов и болезней, если это возможно.
@@ -129,15 +140,67 @@ tags:
 
 Есть разница в использовании боевых наемников. Очевидно, что при их найме "пес войны" будет требовать различных условий в зависимости от целей контракта.
 
+Всегда в городах можно встретить различные виды наемных солдат – лучников, кавалеристов, арбалетчиков, пехоту и т.п. В большинстве случаев они НЕ ПОСЛЕДУЮТ за авантюристами в подземелья, но могут быть использованы для различных стратегических заданий:
+- защита карванов,
+- нахождение лагерей бандитов и агрессивных гуманоидов;
+- исследование и зачистка местности;
+- военные действия;
+- несение гарнизонной службы  в фортах и замках.
+
+Наемные солдаты требуют лидеров, таких как сержанты, лейтенанты и капитаны: 
+- 1 сержант на 10 бойцов;
+- 1 лейтенант на 30 бойцов;
+- 1 капитан на 100 бойцов.
+
+Также найм большого количества наемников явно может вызвать пересуды местного насееления.
+
+Стоимость содержания наемников не включает вспомогательный персонал (такой как бронники), а для военного времени эта стоимость удваивается.
+
+Боевой дух наемников зависит от успехов, смертности, оплаты их услуг, плохого отношения со стороны нанимателя и т.п. Успешные действия и хорошее отношение со сотороны нанимателя может привести и к увеличенному боевому духу.
+
+Солдат – это базовый вид наемного бойца. Жалование солдата составляет в гарнизоне минимум 1 зм, в поле минимум 2 зм, дополнительно в условия найма включается питание. Стоимость снаряжения оговаривается как правило отдельно – для длительных контрактов наниматель должен или предоставить базовое снаряжение или оплатить его стоимость наемнику, для краткосрочных контрактов (таких как охрана караванов) ожидается что наемник обладает своим снаряжением, но такие контракты оплачиваются дороже (как правило, удвоенная стоимость).
+Солдаты, как правило,не участвуют в высокорискованных операциях (наподобие деятльности авантюриста).
+
+Наемник специалист – это наемный боец обладающий специальными знаниями (скауты, обслуживающий персонал осадных орудий).
+
+Элитный солдат – это наемный боец ветеран, обладающий значительными воинскими навыками, полученными в результате длительных тренировок или опыта, и снаряженный максимально качественно. К их числу относятся рыцари, ветераны, члены Городской Гвардии Глубоководья состоящие в Грифоньей Страже.
+Оплата не только по фиксированной ставке.
+
+Пираты распределяли награбленные ими сокровища основываясь на понятии доли – каждому пирату изначально полагалась отдельная равная доля, при этом за выполнение определенных обязанностей или совершение определенных поступков полагались дополнительные доли.
+
+
 **Долгосрочный контракт - охрана поселения или крепости.** Срок заключения - минимум 3 месяца. Является базовым вариантом найма боевых наемников.
 
 **Краткосрочный контракт - охрана персонажей.** Срок заключения - измеряется в днях. Предполагается, что при таком контракте базовая оплата идет за факт наличия боевых наемников вместе с персонажами, а в случае боевых столкновений будет выплачиваться боевая премия в пятикратном размере базовой оплаты за день. При этом боевые наемники, как правило, не идут вместе с персонажами в подземелья или высоко рискованные миссии.
 
 **Краткосрочный контракт - помощь персонажам в любой деятельности.** Срок заключения - измеряется в днях. Предполагается, что при таком контракте имеются высокие риски, поэтому стоимость найма на такой контракт составляет тройную базовую оплату за день и долю добычи/сокровищ/награды. С таким контрактом, боевые наемники будут сопровождать персонажей везде в их деятельности.
 
+### Стоимость наемников и их виды в Забытых Королевствах
+
+“Dullblades” – неопытные, непроверенные или сомнительные мускулы, которых посылают на наиболее опасные заданиия и считают расходным материалом. Им платят по нижней планке: 1 мм в день + двухразовое питание, спальный мешок и перевязка ран с помощью обычных бинтов при необходимости.
+
+На другом конце зарплат находятся высокооплачиваемые специалисты, получающие 25 зм в день – такие как ночные клинки (коммандо), саперы, которые могут возводить мосты и устанавливать бомбы скрытно или во время сражения.
+
+Стандартный наемник получает 1 зм в день + трехразовое питание с выпивкой, размещение в палатке, новую пару сапог и бонус (обычно в размере 5 зм) за каждую выигранную важную битву.
+
+Командир наемной силы получает большой задаток на расходы во время найма, бонус 1000 зм за дсотижение определенных согласованных целей, и большую финальную сумму когда основная задача выполнена. Такие платежи делаются выжившим солдатам и никогда родственникам павших (исключая случаи выплат от товарищей по оружию по личным соглашениям).
+
+Весьма редко наниматели наемников пытаются избежать платежей с помощью уничтожения наемников (будьто атака собственными силами или направление наемников (или оставление в ) в опасную ситуацию). Герольды и жрецы Темпуса заверяют подписание наемных контрактов, сохраняют копии и будут выступать против тех кто предает такие соглашения на альтарях бога Войны и публично, что приведет к тому что с нарушителями никто не будет работать и Темпус отвернется от них и их будет преследовать неудача на поле боя.
+
+Старая поговорка на Фаэруне гласит: «Весна для посадки и ковыряния в грязи, лето для любви и драк, осень для сбора урожая и ковыряния в грязи, и зима для прозябания, ругательств и голода».
+
+Зимой как правило наемники остаются без работы и устраиваются работать охранниками в караваны, где получают минимум – 3 см в день. Как правило зарплата включает двухразовое питание («перекус и плотный», ужин считается плотным), «достойное укрытие» (означая некоторую приватность, очаг и кров) и отпуск в размере двух дней из декады.
+
 ### Создание собственных войск
 
 Если персонажи являются военачальниками или местными лидерами они могут вместо наемников привлекать местное население на службу. В этом случае, привлеченных солдат можно использовать в качестве гарнизонов или военной силы, но не спутников авантюристов. Стоимсть их найма при этом включает стоимость необходимого снаряжения, а вместо полной оплаты им платится половина + стоимость содержания в местах дислокации (или во время путешествия).
+
+### Обученные солдаты / Man-at-Arms (Soldiers)
+
+Содержание: 2 зм/день в лагере или замке. Стандартная стоимость рационов при деятельности в полевых условиях, с уменьшением до 10 зм/месяц если персонаж снаряжает армию с соответствующим количеством фургонов снабжения для приобретения припасов оптом.
+
+Зарплата: Отсутствует, если солдат является последователем персонажа с твердыней. В противном случае, расквартированные в домашней местности солдаты получают 1 зм/день, лучники 2 зм/день, кавалерия 4 зм/день. Наемные войска более дорогие: пехотинец получает 2 зм/день, лучники 4 зм/день, кавалерия – 8 зм/день. Сержанты получают двойную зарплату, лейтенанты тройную и капитаны получают в четыре раза больше рядового бойца.
+Начальное снаряжение: исходя из снаряжения.
 
 **Наемник (Базовый).** *Бандит* или *охранник*. Наемник будет сражаться на вашей стороне, до определенного момента. Если вы или ваши союзники (включая других наемников) падете, любые наемники базового уровня, работающие на вас, будут подвержены воздействию беоевого духа (подробно описанного в главе 9 "Сражение" Core d20 RPG) и могут бежать. Наемники не питают к вам особой лояльности, кроме своей зарплаты, хотя сотрудничество с вами какое-то время может изменить сердца некоторых. Если обычный наемник, которого вы нанимаете, часто теряет сознание или видит ужасные зрелища, он может уйти с вашей работы в поисках более зеленых пастбищ.
 
@@ -149,7 +212,7 @@ tags:
 
 При этом наемники обладающие дорого стоящим снаряжением как правило берут за свои услуги больше.
 
-Базовые оценки стоимости найма боевых наемников
+### Базовые оценки стоимости найма боевых наемников
 
 | Показатель опасности | Уровень | Стоимость, зм/день | Зарплата | Содержание | Найм, зм/день |
 |----------------------|---------|--------------------|----------|------------|---------------|
