--- a/src/content/posts/articles/economy-dnd-model-5.mdx
+++ b/src/content/posts/articles/economy-dnd-model-5.mdx
@@ -136,7 +136,7 @@ tags:
 - любой не боевой наемник, путешествующий вместе с отрядом авантюристов ожидает что расходы на путешествие также несут авантюристы;
 - 
 
-### Боевые наемники
+## Боевые наемники
 
 Есть разница в использовании боевых наемников. Очевидно, что при их найме "пес войны" будет требовать различных условий в зависимости от целей контракта.
 
